--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ Logs/shadercompiler-UnityShaderCompiler.exe1.log
 Logs/shadercompiler-UnityShaderCompiler.exe2.log
 Logs/shadercompiler-UnityShaderCompiler.exe3.log
 Logs/shadercompiler-UnityShaderCompiler.exe4.log
+Logs/shadercompiler-UnityShaderCompiler.exe0.log
