--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ Logs/shadercompiler-UnityShaderCompiler.exe0.log
 Logs/shadercompiler-UnityShaderCompiler.exe0.log
 Logs/shadercompiler-UnityShaderCompiler.exe0.log
 *.log
+Logs/shadercompiler-UnityShaderCompiler.exe0.log
